add a page for adding user, hope it work

--- a/application.json
+++ b/application.json
@@ -3,6 +3,10 @@
     {
       "id": "Page1",
       "isDefault": true
+    },
+    {
+      "id": "Add_User",
+      "isDefault": false
     }
   ],
   "viewMode": false,
