--- a/application.json
+++ b/application.json
@@ -1,11 +1,15 @@
 {
   "pages": [
     {
-      "id": "Page1",
+      "id": "Workouts",
       "isDefault": true
     },
     {
       "id": "Add a new",
+      "isDefault": false
+    },
+    {
+      "id": "Diets",
       "isDefault": false
     }
   ],
