--- a/application.json
+++ b/application.json
@@ -23,7 +23,7 @@
   "color": "#D9E7FF",
   "icon": "burger",
   "unpublishedAppLayout": {
-    "type": "DESKTOP"
+    "type": "FLUID"
   },
   "publishedAppLayout": {
     "type": "DESKTOP"
