--- a/application.json
+++ b/application.json
@@ -13,7 +13,7 @@
       "isDefault": false
     },
     {
-      "id": "Page1",
+      "id": "Exercise Page",
       "isDefault": false
     }
   ],
