--- a/application.json
+++ b/application.json
@@ -5,7 +5,7 @@
       "isDefault": true
     },
     {
-      "id": "Add a new",
+      "id": "Create New User",
       "isDefault": false
     },
     {
