Added my changes

--- a/application.json
+++ b/application.json
@@ -15,6 +15,10 @@
     {
       "id": "hireTrainer",
       "isDefault": false
+    },
+    {
+      "id": "Exercise",
+      "isDefault": false
     }
   ],
   "viewMode": false,
