--- a/application.json
+++ b/application.json
@@ -17,7 +17,7 @@
       "isDefault": false
     },
     {
-      "id": "Add a new Copy",
+      "id": "Add New User",
       "isDefault": false
     }
   ],
